--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "sha1": "^1.1.1",
     "vue": "^1.0.0",
     "vue-router": "^0.7.13"
   },
