--- a/package.json
+++ b/package.json
@@ -4,31 +4,19 @@
   "author": "Thomas Dy <thatsmydoing@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "vite",
+    "build": "vue-tsc && vite build"
   },
   "dependencies": {
-    "babel-runtime": "^6.0.0",
+    "lodash": "^4.17.21",
     "sha1": "^1.1.1",
-    "vue": "^1.0.0",
-    "vue-router": "^0.7.13"
+    "vue": "^2.7.0",
+    "vue-router": "^3.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "cross-env": "^1.0.6",
-    "css-loader": "^0.23.0",
-    "file-loader": "^0.8.4",
-    "json-loader": "^0.5.4",
-    "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^1.2.0",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^8.2.1",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "@vitejs/plugin-vue2": "^2.2.0",
+    "typescript": "^4.9.5",
+    "vite": "^4.0.0",
+    "vue-tsc": "^1.1.3"
   }
 }
